Added landing & settings page

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -12,6 +12,9 @@
   --content-bg: rgba(35, 35, 35, .8);
   --sidebar-bg: rgba(66, 66, 66, .5);
   --app-border: rgb(134, 134, 134);
+  --item-bg: rgba(80, 80, 80, .3);
+  --item-hover-bg: rgba(80, 80, 80, .6);
+  --item-border-color: rgb(22, 22, 22, .3);
 }
 
 * {
