Add show read notifications setting

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -15,6 +15,7 @@
   --item-bg: rgba(80, 80, 80, .3);
   --item-hover-bg: rgba(80, 80, 80, .75);
   --item-border-color: rgb(22, 22, 22, .3);
+  --notification-title-color: rgba(14, 14, 14, .72);
 }
 
 * {
