--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -11,7 +11,7 @@
   --white: rgb(255, 255, 255);
   --content-bg: rgba(35, 35, 35, .8);
   --sidebar-bg: rgba(66, 66, 66, .5);
-  --app-border: rgb(134, 134, 134);
+  --app-border: rgb(90, 90, 90);
   --item-bg: rgba(80, 80, 80, .3);
   --item-hover-bg: rgba(80, 80, 80, .75);
   --item-border-color: rgb(22, 22, 22, .3);
@@ -33,10 +33,10 @@ html {
   overflow: hidden;
   @include borderRadiusOverflowHidden(8px);
   outline: none;
+  border: 1px solid var(--app-border);
 }
 
 body {
-  @include borderRadiusOverflowHidden(8px);
   width: 100%;
   height: 100%;
   overflow: hidden;
