--- a/src/assets/mixins.scss
+++ b/src/assets/mixins.scss
@@ -4,12 +4,18 @@
   mask-image: -webkit-radial-gradient(white, black);
 }
 
+@mixin text-outline($size: 1px) {
+  text-shadow: 0 0 $size black, 0 0 $size black, 0 0 $size black, 0 0 $size black;
+}
+
 @mixin focus-visible {
-  &:focus-visible {
+  &:not([disabled])[data-focus-visible-added] {
     box-shadow: 0px 0px 0px 1px var(--white-faded);
   }
 }
 
-@mixin text-outline($size: 1px) {
-  text-shadow: 0 0 $size black, 0 0 $size black, 0 0 $size black, 0 0 $size black;
+@mixin focus-visible-content {
+  &:not([disabled])[data-focus-visible-added] {
+    @content;
+  }
 }
