--- a/src/assets/mixins.scss
+++ b/src/assets/mixins.scss
@@ -8,10 +8,20 @@
   text-shadow: 0 0 $size black, 0 0 $size black, 0 0 $size black, 0 0 $size black;
 }
 
+@keyframes outline-anim {
+  0% {
+    outline-offset: 5px;
+  }
+  100% {
+    outline-offset: 0px;
+  }
+}
+
 @mixin focus-visible($additionalShadow: null) {
   outline: none;
   &:not([disabled])[data-focus-visible-added] {
-    box-shadow: 0px 0px 0px 1px var(--white-faded);
+    outline: auto;
+    animation: outline-anim .2s forwards;
   }
 }
 
