Add checkboxes and bottom bar

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -10,6 +10,7 @@
   --white-faded: rgb(190, 190, 190);
   --white: rgb(255, 255, 255);
   --content-bg: rgba(30, 30, 30, .8);
+  --bottom-bar-bg: rgba(21, 21, 21, 0.2);
   --sidebar-bg: rgba(50, 50, 50, .75);
   --app-border: rgb(90, 90, 90);
   --item-bg: rgba(80, 80, 80, .3);
