Add windows & linux support

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -9,13 +9,22 @@
 
   --white-faded: rgb(190, 190, 190);
   --white: rgb(255, 255, 255);
-  --content-bg: rgba(30, 30, 30, .8);
-  --bottom-bar-bg: rgba(21, 21, 21, 0.2);
-  --sidebar-bg: rgba(50, 50, 50, .75);
   --app-border: rgb(90, 90, 90);
   --item-bg: rgba(80, 80, 80, .3);
   --item-hover-bg: rgba(80, 80, 80, .75);
   --item-border-color: rgb(22, 22, 22, .3);
+}
+
+:root:not(.mac) {
+  --content-bg: rgba(30, 30, 30);
+  --bottom-bar-bg: rgba(26, 26, 26);
+  --sidebar-bg: rgba(50, 50, 50);
+}
+
+:root.mac {
+  --content-bg: rgba(30, 30, 30, .8);
+  --bottom-bar-bg: rgba(21, 21, 21, 0.2);
+  --sidebar-bg: rgba(50, 50, 50, .75);
 }
 
 * {
