Redesign Settings Page & Add Tooltips

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -10,13 +10,16 @@
   --white-faded: rgb(190, 190, 190);
   --white: rgb(255, 255, 255);
   --content-bg: rgba(30, 30, 30, .8);
+  --page-header-bg: rgba(43, 43, 43, .6);
   --popover-bg: rgba(40, 40, 40, .6);
+  --popover-bg-solid: rgba(40, 40, 40);
   --bottom-bar-bg: rgba(21, 21, 21, 0.2);
   --sidebar-bg: rgba(50, 50, 50, .75);
   --app-border: rgb(90, 90, 90);
   --item-bg: rgba(80, 80, 80, .3);
   --item-hover-bg: rgba(80, 80, 80, .75);
   --item-border-color: rgb(22, 22, 22, .3);
+  --accent-color: rgb(60, 175, 252);
 }
 
 * {
@@ -68,9 +71,3 @@ button, a {
   @include borderRadiusOverflowHidden(8px);
 }
 
-.icon:not(.no-stroke) {
-  stroke: black;
-  stroke-width: 1px;
-  stroke-linejoin: round;
-  paint-order: stroke;
-}
