Add contextmenu to notifications & Remove BottomBar

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -9,6 +9,8 @@
 
   --white-faded: rgb(190, 190, 190);
   --white: rgb(255, 255, 255);
+  --gray-bright: rgb(150, 150, 150);
+  --gray: rgb(95, 95, 95);
   --content-bg: rgba(30, 30, 30, .8);
   --page-header-bg: rgba(43, 43, 43, .6);
   --popover-bg: rgba(40, 40, 40, .6);
