--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -7,7 +7,7 @@ $colors: (
     switch-dot: rgb(255, 255, 255) rgb(255, 255, 255),
     gray: rgb(95, 95, 95) rgb(95, 95, 95),
     switch-bg: var(--gray) var(--gray),
-    content-bg: rgba(30, 30, 30, 8) rgb(30, 30, 30),
+    content-bg: rgba(30, 30, 30, .8) rgb(30, 30, 30),
     page-header-bg: rgba(43, 43, 43, .6) rgb(43, 43, 43),
     popover-bg: rgba(20, 20, 20, .6) rgb(26, 26, 26),
     bottom-bar-bg: rgba(21, 21, 21, 0.2) rgb(21, 21, 21),
